# music_transfer

./: LICENSE  README.md  config.toml  install.sh  pyproject.toml  requirements.txt  run.sh  setup.cfg  test.sh
src/: collection.py  main.py
src/app/: config.py  errors.py  main.py  menu.py  song.py
src/app/devices/: adb.py  device.py
src/app/playlists/: m3u.py  playlist.py
src/app/sources/: rhythmbox.py
src/music_transfer/: collection.py  config.py  errors.py  main.py  song.py  util.py
src/music_transfer/devices/: adb.py  device.py
src/music_transfer/playlists/: m3u.py  playlist.py
src/music_transfer/sources/: rhythmbox.py  source.py
test/: config.py  test_collection.py  test_song.py
test/assets/: song_sources.txt
test/assets/rhythmbox/: playlists.xml  rhythmdb.xml
test/parsing/: playlists.xml  test_rhythmbox.py
