[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "music_transfer"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
version = "0.1.0"
dependencies = [
    'simple-term-menu >= 1.6.1',
    'tinytag >= 1.9.0',
    'hfilesize >= 0.1.0',
    'progress1bar >= 0.3.0',
    'halo >= 0.0.31',
    'platformdirs >= 3.9.1',
    'tomlkit >= 0.11.8',
]

[tool.setuptools.packages.find]
where = ["src"]
